--- a/style.css
+++ b/style.css
@@ -20,18 +20,14 @@ body #navbar {
   background-color: #33658a;
 }
 body .main #welcome-section {
-  background-color: #33658a;
-  color: #2f323a;
+  background-color: #2f323a;
+  color: whitesmoke;
   height: 100vh;
+  padding: 0 2rem 1rem 1rem;
 }
-body .main #welcome-section .zdog-canvas {
-  display: block;
+body .main #welcome-section .welcomeCanvas {
   width: 100%;
-  height: 100%;
-  background-color: #33658a;
-  position: absolute;
-  top: 0;
-  right: 0;
+  background-color: #2f323a;
 }
 body .main #welcome-section #welcomeText {
   position: absolute;
@@ -41,7 +37,7 @@ body .main #welcome-section #welcomeText {
   transform: translate(-50%);
 }
 body .main #welcome-section #welcomeText .textHighlight {
-  color: #f26419;
+  color: #ee3b3b;
 }
 body .main footer {
   background-color: lightcoral;
@@ -74,7 +70,7 @@ body .main footer #copyrightContainer {
 }
 
 .updateNav {
-  background-color: #f26419 !important;
+  background-color: #ee3b3b !important;
 }
 
 /*# sourceMappingURL=style.css.map */
